--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2281,7 +2281,7 @@ body.login #main #login-form {
   height: 50vh;
   min-height: 300px;
   max-height: 750px;
-  background: #114AA1;
+  background: #840b70;
   padding: 3em 53px;
   position: relative;
   z-index: 1000;
@@ -2309,9 +2309,9 @@ body.login #main #login-form p {
 }
 
 #login-form form .form-input input {
-  border: 2px solid #10294E;
-  border-top: 2px solid #10294E;
-  border-bottom: 2px solid #417AD1;
+  border: 2px solid #5c074e;
+  border-top: 2px solid #5c074e;
+  border-bottom: 2px solid #ae2c98;
   width: 300px;
 }
 
@@ -2370,7 +2370,7 @@ body.login #main #login-form p {
   padding: .5em;
   display: block;
   border-radius: 5px;
-  background: #143971;
+  background: #710960;
   color: #fff;
 }
 
