--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2290,7 +2290,7 @@ body.login #main #login-form {
 body.login #main #login-form p {
   font-size: 0.8em;
   padding: 1em;
-  color: #70A3F2;
+  color: #fff;
   position: absolute;
   left: 0;
   bottom: 0;
